--- a/package.json
+++ b/package.json
@@ -13,45 +13,45 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.0.1",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.6",
     "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
-    "expo": "53.0.10",
-    "expo-font": "~13.3.1",
-    "expo-linking": "~7.1.5",
-    "expo-location": "^18.1.5",
-    "expo-router": "~5.0.6",
-    "expo-splash-screen": "~0.30.9",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.8",
-    "expo-web-browser": "~14.1.6",
+    "expo": "^54.0.25",
+    "expo-dev-client": "~6.0.18",
+    "expo-font": "~14.0.9",
+    "expo-linking": "~8.0.9",
+    "expo-location": "~19.0.7",
+    "expo-router": "~6.0.15",
+    "expo-splash-screen": "~31.0.11",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.8",
+    "expo-web-browser": "~15.0.9",
     "lodash.debounce": "^4.0.8",
     "nanoid": "^5.1.5",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.56.4",
-    "react-native": "0.79.3",
+    "react-native": "0.81.5",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.20.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
     "uuid": "^11.1.0",
-    "zod": "^3.25.42",
-    "expo-dev-client": "~5.2.0"
+    "zod": "^3.25.42"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.7",
+    "jest-expo": "~54.0.13",
     "react-test-renderer": "19.0.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
   "private": true,
   "expo": {
